--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./data:/data
     environment:
       - SQLITE_DATABASE=honeypot.db
+      - SQLITE_WEB_PASSWORD=haslo  # Zmien haslo!!!
     networks:
       - honeynet
 
